Bug visual do overflow css em mobile resolvido

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
-body {
+body, .wrapper{
+  position: relative;
+  width: 100vw;
+  height: 100vh;
   background-color: #f3f3f3;
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
 }
+
 
 body * {
   box-sizing: border-box;
